deployments/kubernetes-dashboard/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  annotations:
    linkerd.io/inject: disabled
